--- a/public/style.css
+++ b/public/style.css
@@ -23,12 +23,6 @@ p {
   margin-top: 3.5vh;
 }
 
-@media (max-height: 620px) {
-  p {
-    margin-top: 0;
-  }
-}
-
 #main {
   margin-top: 12vh;
   display: flex;
@@ -56,7 +50,49 @@ p {
 }
 
 #chatbox {
-  border: 2px solid Black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+  box-shadow: 2px 7px 7px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
   height: 85vh;
   width: 20vw;
+}
+
+form {
+  margin-top: 78vh;
+  position: fixed;
+  bottom: 3vh;
+}
+
+#text {
+  border: none;
+  border-radius: 5px;
+  padding: 1.5vh;
+  font-size: 15px;
+  width: 16vw;
+}
+
+#messages {
+  list-style-type: none;
+  margin: 0;
+  margin-bottom: 10%;
+  padding: 0;
+  font-family: 'Nunito', cursive;
+}
+
+#messages li {
+  padding: 1.5vh;
+}
+
+#messages li:nth-child(odd) {
+  background: #eee;
+}
+
+
+@media (max-height: 620px) {
+  p {
+    margin-top: 0;
+  }
 }
