--- a/public/style2.css
+++ b/public/style2.css
@@ -92,7 +92,15 @@ footer {
 
 @media (max-height: 700px) {
   h1 {
-    margin-top: 0;
-    font-size: 4.5em;
+    margin-top: 1%;
+    font-size: 6em;
+  }
+
+  #paint {
+    width: 35vw;
+  }
+
+  #game {
+    width: 35vw;
   }
 }
