--- a/public/style.css
+++ b/public/style.css
@@ -188,6 +188,13 @@ canvas {
   padding: 10px 15px;
   border-radius: 5px;
   font-size: 20px;
+  box-shadow: 0px 6px 0px 0px BurlyWood;
+}
+
+#clear-button:focus {
+  transform: translateY(2px);
+  box-shadow: 0px 4px 0px 0px BurlyWood;
+  outline: 0;
 }
 
 #draw-score {
