--- a/public/style.css
+++ b/public/style.css
@@ -231,7 +231,7 @@ hr {
 
 #chat-placeholder p {
   font-size: 1.5em;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Nunito', cursive;
   text-align: center;
   margin-top: 1vh;
 }
